Fix white space in <pre />

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -500,6 +500,7 @@ pre {
 pre code {
   background-color: unset;
   padding: 0;
+  white-space: pre;
 }
 
 blockquote {
